--- a/index.html
+++ b/index.html
@@ -1,9 +1,182 @@
-<html>
- 
-<body>
-  <h1>YOUR NAME</h1>
-  <p>Welcome to my website!</p>
-  <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
-</body>
- 
-</html>
+<div>
+    <link href="./android-large1.css" rel="stylesheet" />
+    <div>
+      <div class="android-large1-android-large1">
+        <div class="android-large1-topappbar">
+          <div class="android-large1-leadingicon">
+            <div class="android-large1-container1">
+              <div class="android-large1-statelayer">
+                <img
+                  src="/playground_assets/iconsmenu24pxi140-v8xj.svg"
+                  alt="Iconsmenu24pxI140"
+                  class="android-large1-iconsmenu24px"
+                />
+              </div>
+            </div>
+          </div>
+          <span class="android-large1-text M3titlelarge">
+            <span>CSS Cheat Sheet</span>
+          </span>
+          <div class="android-large1-trailingicon">
+            <div class="android-large1-container2">
+              <div class="android-large1-statelayer1">
+                <img
+                  src="/playground_assets/iconsaccountcirclefilled24pxi140-0xtv.svg"
+                  alt="Iconsaccountcirclefilled24pxI140"
+                  class="android-large1-iconsaccountcirclefilled24px"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="android-large1-stackedcard-style4">
+          <div class="android-large1-card-elevated">
+            <div class="android-large1-statelayer2"></div>
+          </div>
+          <div class="android-large1-contentcontainer">
+            <div class="android-large1-media-textcontent">
+              <div class="android-large1-header">
+                <div class="android-large1-content">
+                  <div class="android-large1-monogram">
+                    <img
+                      src="/playground_assets/backgroundi140-44v-200h.png"
+                      alt="backgroundI140"
+                      class="android-large1-background"
+                    />
+                    <span class="android-large1-text02 M3titlemedium">A</span>
+                  </div>
+                  <div class="android-large1-text03">
+                    <span class="android-large1-text04 M3titlemedium">
+                      <span>Write CSS in Separate Files</span>
+                    </span>
+                  </div>
+                </div>
+                <button class="android-large1-iconbutton">
+                  <div class="android-large1-container3">
+                    <div class="android-large1-statelayer3">
+                      <img
+                        src="/playground_assets/iconsmorevert24pxi140-4hc.svg"
+                        alt="Iconsmorevert24pxI140"
+                        class="android-large1-iconsmorevert24px"
+                      />
+                    </div>
+                  </div>
+                </button>
+              </div>
+              <div class="android-large1-media">
+                <span class="android-large1-text06 M3titlelarge">
+                  <span class="android-large1-text07">&lt;</span>
+                  <span class="android-large1-text08">head</span>
+                  <span class="android-large1-text09">
+                    <span>&gt;</span>
+                    <br />
+                    <span>
+                      &lt;link href=&quot;style.css&quot;
+                      type=&quot;text/css&quot; rel=&quot;stylesheet&quot;&gt;
+                    </span>
+                    <br />
+                    <span>&lt;</span>
+                  </span>
+                  <span class="android-large1-text15">/head&gt;</span>
+                </span>
+              </div>
+              <div class="android-large1-textcontent">
+                <span class="android-large1-text16 M3bodymedium">
+                  <span>
+                    CSS code can be written in its own files to keep it separate
+                    from the HTML code. The extension for CSS files is .css. These
+                    can be linked to an HTML file using a &lt;link&gt; tag in the
+                    &lt;head&gt; section.
+                  </span>
+                </span>
+                <div class="android-large1-actions">
+                  <button class="android-large1-button">
+                    <div class="android-large1-statelayer4">
+                      <span class="android-large1-text18 M3labellarge">
+                        <span>Read</span>
+                      </span>
+                    </div>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="android-large1-stackedcard-style41">
+          <div class="android-large1-card-elevated1">
+            <div class="android-large1-statelayer5"></div>
+          </div>
+          <div class="android-large1-contentcontainer1">
+            <div class="android-large1-media-textcontent1">
+              <div class="android-large1-header1">
+                <div class="android-large1-content1">
+                  <div class="android-large1-monogram1">
+                    <img
+                      src="/playground_assets/backgroundi140-zqhp-200h.png"
+                      alt="backgroundI140"
+                      class="android-large1-background1"
+                    />
+                    <span class="android-large1-text20 M3titlemedium">A</span>
+                  </div>
+                  <div class="android-large1-text21">
+                    <span class="android-large1-text22 M3titlemedium">
+                      <span>Write CSS in HTML File</span>
+                    </span>
+                  </div>
+                </div>
+                <button class="android-large1-iconbutton1">
+                  <div class="android-large1-container4">
+                    <div class="android-large1-statelayer6">
+                      <img
+                        src="/playground_assets/iconsmorevert24pxi140-ie1.svg"
+                        alt="Iconsmorevert24pxI140"
+                        class="android-large1-iconsmorevert24px1"
+                      />
+                    </div>
+                  </div>
+                </button>
+              </div>
+              <div class="android-large1-media1">
+                <span class="android-large1-text24 M3titlelarge">
+                  <span>
+                    <span>&lt;head&gt;</span>
+                    <br />
+                    <span>&lt;style&gt;</span>
+                    <br />
+                    <span>h1 &#123;</span>
+                    <br />
+                    <span>color: blue;</span>
+                    <br />
+                    <span>&#125;</span>
+                    <br />
+                    <span>&lt;/style&gt;</span>
+                    <br />
+                    <span>&lt;/head&gt;</span>
+                  </span>
+                </span>
+              </div>
+              <div class="android-large1-textcontent1">
+                <span class="android-large1-text39 M3bodymedium">
+                  <span>
+                    CSS code can be written in an HTML file by enclosing the code
+                    in &lt;style&gt; tags. Code surrounded by &lt;style&gt; tags
+                    will be interpreted as CSS syntax.
+                  </span>
+                </span>
+                <div class="android-large1-actions1">
+                  <button class="android-large1-button1">
+                    <div class="android-large1-statelayer7">
+                      <span class="android-large1-text41 M3labellarge">
+                        <span>Read</span>
+                      </span>
+                    </div>
+                  </button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  
