--- a/index.html
+++ b/index.html
@@ -6,176 +6,205 @@
     </title>
     <link href="./frame1.css" rel="stylesheet" />
   </head>
-    <div class="frame1-frame1">
-      <div class="frame1-topappbar">
-        <span class="frame1-text M3titlelarge">
-          <span>CSS Cheat Sheet</span>
-        </span>
-      </div>
-      <div class="frame1-framecardrow">
-        <div class="card">
-          <div class="frame1-card-elevated">
-            <div class="frame1-statelayer"></div>
-          </div>
-          <div class="frame1-contentcontainer">
-            <div class="frame1-media-textcontent">
-              <div class="frame1-header">
-                <div class="frame1-content">
-                  <div class="frame1-text02">
-                    <span class="frame1-text03 M3titlemedium">
-                      <span>Write CSS in Separate Files</span>
-                    </span>
+  <div>
+    <link href="./frame1.css" rel="stylesheet" />
+    <div>
+      <div class="frame1-frame1">
+        <div class="frame1-topappbar">
+          <span class="frame1-text M3titlelarge">
+            <span>CSS Cheat Sheet</span>
+          </span>
+        </div>
+        <div class="frame1-framecardrow">
+          <div class="frame1-card1">
+            <div class="frame1-card-elevated">
+              <div class="frame1-statelayer"></div>
+            </div>
+            <div class="frame1-contentcontainer">
+              <div class="frame1-media-textcontent">
+                <div class="frame1-header">
+                  <div class="frame1-content">
+                    <div class="frame1-text02">
+                      <span class="frame1-text03 M3titlemedium">
+                        <span>Write CSS in Separate Files</span>
+                      </span>
+                    </div>
                   </div>
                 </div>
-              </div>
-              <div class="frame1-media">
-                <span class="frame1-text05 M3titlelarge">
-                  <span class="frame1-text06">&lt;</span>
-                  <span class="frame1-text07">head</span>
-                  <span class="frame1-text08">
-                    <span>&gt;</span>
-                    <br />
+                <div class="frame1-media">
+                  <span class="frame1-text05 M3titlelarge">
+                    <span class="frame1-text06">&lt;</span>
+                    <span class="frame1-text07">head</span>
+                    <span class="frame1-text08">
+                      <span>&gt;</span>
+                      <br />
+                      <span>
+                        &lt;link href=&quot;style.css&quot;
+                        type=&quot;text/css&quot; rel=&quot;stylesheet&quot;&gt;
+                      </span>
+                      <br />
+                      <span>&lt;</span>
+                    </span>
+                    <span class="frame1-text14">/head&gt;</span>
+                  </span>
+                </div>
+                <div class="frame1-textcontent">
+                  <span class="frame1-text15 M3bodymedium">
                     <span>
-                      &lt;link href=&quot;style.css&quot;
-                      type=&quot;text/css&quot; rel=&quot;stylesheet&quot;&gt;
+                      CSS code can be written in its own files to keep it separate
+                      from the HTML code. The extension for CSS files is .css.
+                      These can be linked to an HTML file using a &lt;link&gt; tag
+                      in the &lt;head&gt; section.
                     </span>
-                    <br />
-                    <span>&lt;</span>
                   </span>
-                  <span class="frame1-text14">/head&gt;</span>
-                </span>
+                  <div class="frame1-actions">
+                    <button class="frame1-button">
+                      <div class="frame1-statelayer1">
+                        <span class="frame1-text17 M3labellarge">
+                          <span>Read</span>
+                        </span>
+                      </div>
+                    </button>
+                  </div>
+                </div>
               </div>
-              <div class="frame1-textcontent">
-                <span class="frame1-text15 M3bodymedium">
-                  <span>
-                    CSS code can be written in its own files to keep it separate
-                    from the HTML code. The extension for CSS files is .css.
-                    These can be linked to an HTML file using a &lt;link&gt; tag
-                    in the &lt;head&gt; section.
-                  </span>
-                </span>
-                <div class="frame1-actions">
-                  <button class="frame1-button">
-                    <div class="frame1-statelayer1">
-                      <span class="frame1-text17 M3labellarge">
-                        <span>Read</span>
+            </div>
+          </div>
+          <div class="frame1-card2">
+            <div class="frame1-card-elevated1">
+              <div class="frame1-statelayer2"></div>
+            </div>
+            <div class="frame1-contentcontainer1">
+              <div class="frame1-media-textcontent1">
+                <div class="frame1-header1">
+                  <div class="frame1-content1">
+                    <div class="frame1-text19">
+                      <span class="frame1-text20 M3titlemedium">
+                        <span>Write CSS in HTML File</span>
                       </span>
                     </div>
-                  </button>
+                  </div>
+                </div>
+                <div class="frame1-media1">
+                  <span class="frame1-text22 M3titlelarge">
+                    <span class="frame1-text23">&lt;</span>
+                    <span class="frame1-text24">head</span>
+                    <span>
+                      <span>&gt;</span>
+                      <br />
+                      <span>&lt;style&gt;</span>
+                      <br />
+                      <span>h1 &#123;</span>
+                      <br />
+                      <span>color: blue;</span>
+                      <br />
+                      <span>&#125;</span>
+                      <br />
+                      <span>&lt;/style&gt;</span>
+                      <br />
+                      <span>&lt;/head&gt;</span>
+                    </span>
+                  </span>
+                </div>
+                <div class="frame1-textcontent1">
+                  <span class="frame1-text39 M3bodymedium">
+                    <span>
+                      CSS code can be written in an HTML file by enclosing the
+                      code in &lt;style&gt; tags. Code surrounded by &lt;style&gt;
+                      tags will be interpreted as CSS syntax.
+                    </span>
+                  </span>
+                  <div class="frame1-actions1">
+                    <button class="frame1-button1">
+                      <div class="frame1-statelayer3">
+                        <span class="frame1-text41 M3labellarge">
+                          <span>Read</span>
+                        </span>
+                      </div>
+                    </button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="frame1-card3">
+            <div class="frame1-card-elevated2">
+              <div class="frame1-statelayer4"></div>
+            </div>
+            <div class="frame1-contentcontainer2">
+              <div class="frame1-media-textcontent2">
+                <div class="frame1-header2">
+                  <div class="frame1-content2">
+                    <div class="frame1-text43">
+                      <span class="frame1-text44 M3titlemedium">
+                        <span>I try to use responsive design</span>
+                      </span>
+                    </div>
+                  </div>
+                </div>
+                <div class="frame1-media2">
+                  <span class="frame1-text46 M3titlelarge">
+                    <span>Please Help!</span>
+                  </span>
+                </div>
+                <div class="frame1-textcontent2">
+                  <span class="frame1-text48 M3bodymedium">
+                    <span>But I just don’t know how</span>
+                  </span>
+                  <div class="frame1-actions2">
+                    <button class="frame1-button2">
+                      <div class="frame1-statelayer5">
+                        <span class="frame1-text50 M3labellarge">
+                          <span>Read</span>
+                        </span>
+                      </div>
+                    </button>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-        <div class="card">
-          <div class="frame1-card-elevated1">
-            <div class="frame1-statelayer2"></div>
-          </div>
-          <div class="frame1-contentcontainer1">
-            <div class="frame1-media-textcontent1">
-              <div class="frame1-header1">
-                <div class="frame1-content1">
-                  <div class="frame1-text19">
-                    <span class="frame1-text20 M3titlemedium">
-                      <span>Write CSS in HTML File</span>
-                    </span>
+        <div class="frame1-table">
+          <div>
+            <div class="frame1-table1">
+              <div class="frame1-row">
+                <div class="frame1-cell">
+                  <div class="frame1-content3">
+                    <span class="frame1-text52"><span>selector</span></span>
+                  </div>
+                </div>
+                <div class="frame1-cell1">
+                  <div class="frame1-content4">
+                    <span class="frame1-text54"><span>symbol</span></span>
                   </div>
                 </div>
               </div>
-              <div class="frame1-media1">
-                <span class="frame1-text22 M3titlelarge">
-                  <span class="frame1-text23">&lt;</span>
-                  <span class="frame1-text24">head</span>
-                  <span>
-                    <span>&gt;</span>
-                    <br />
-                    <span>&lt;style&gt;</span>
-                    <br />
-                    <span>h1 &#123;</span>
-                    <br />
-                    <span>color: blue;</span>
-                    <br />
-                    <span>&#125;</span>
-                    <br />
-                    <span>&lt;/style&gt;</span>
-                    <br />
-                    <span>&lt;/head&gt;</span>
-                  </span>
-                </span>
-              </div>
-              <div class="frame1-textcontent1">
-                <span class="frame1-text39 M3bodymedium">
-                  <span>
-                    CSS code can be written in an HTML file by enclosing the
-                    code in &lt;style&gt; tags. Code surrounded by &lt;style&gt;
-                    tags will be interpreted as CSS syntax.
-                  </span>
-                </span>
-                <div class="frame1-actions1">
-                  <button class="frame1-button1">
-                    <div class="frame1-statelayer3">
-                      <span class="frame1-text41 M3labellarge">
-                        <span>Read</span>
-                      </span>
-                    </div>
-                  </button>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card">
-          <div class="frame1-card-elevated2">
-            <div class="frame1-statelayer4"></div>
-          </div>
-          <div class="frame1-contentcontainer2">
-            <div class="frame1-media-textcontent2">
-              <div class="frame1-header2">
-                <div class="frame1-content2">
-                  <div class="frame1-text43">
-                    <span class="frame1-text44 M3titlemedium">
-                      <span>Write CSS in HTML File</span>
+              <div class="frame1-row1">
+                <div class="frame1-cell2">
+                  <div class="frame1-content5">
+                    <span class="frame1-text56">
+                      <span>id</span>
+                      <br />
                     </span>
                   </div>
                 </div>
+                <div class="frame1-cell3">
+                  <div class="frame1-content6">
+                    <span class="frame1-text59">#&#123;id name&#125;</span>
+                  </div>
+                </div>
               </div>
-              <div class="frame1-media2">
-                <span class="frame1-text46 M3titlelarge">
-                  <span class="frame1-text47">&lt;</span>
-                  <span class="frame1-text48">head</span>
-                  <span>
-                    <span>&gt;</span>
-                    <br />
-                    <span>&lt;style&gt;</span>
-                    <br />
-                    <span>h1 &#123;</span>
-                    <br />
-                    <span>color: blue;</span>
-                    <br />
-                    <span>&#125;</span>
-                    <br />
-                    <span>&lt;/style&gt;</span>
-                    <br />
-                    <span>&lt;/head&gt;</span>
-                  </span>
-                </span>
-              </div>
-              <div class="frame1-textcontent2">
-                <span class="frame1-text63 M3bodymedium">
-                  <span>
-                    CSS code can be written in an HTML file by enclosing the
-                    code in &lt;style&gt; tags. Code surrounded by &lt;style&gt;
-                    tags will be interpreted as CSS syntax.
-                  </span>
-                </span>
-                <div class="frame1-actions2">
-                  <button class="frame1-button2">
-                    <div class="frame1-statelayer5">
-                      <span class="frame1-text65 M3labellarge">
-                        <span>Read</span>
-                      </span>
-                    </div>
-                  </button>
+              <div class="frame1-row2">
+                <div class="frame1-cell4">
+                  <div class="frame1-content7">
+                    <span class="frame1-text60"><span>class</span></span>
+                  </div>
+                </div>
+                <div class="frame1-cell5">
+                  <div class="frame1-content8">
+                    <span class="frame1-text62">.&#123;class name&#125;</span>
+                  </div>
                 </div>
               </div>
             </div>
@@ -184,5 +213,4 @@
       </div>
     </div>
   </div>
-  </div>
-</html>
+  
